[gd_scene load_steps=2 format=3 uid="uid://cfetp7httgilr"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_agihh"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_agihh")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPosition_1" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 50)

[node name="SpawnPosition_2" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 175)

[node name="SpawnPosition_3" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 300)

[node name="SpawnPosition_4" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 425)

[node name="SpawnPosition_5" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 550)

[node name="SpawnPosition_6" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 675)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="EnemypathTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="EnemypathTimer" to="." method="_on_enemypath_timer_timeout"]
